Bug 274516. Tables should use the ordered rowgroup array to decide which children to push, not just follow the sibling list. Also, repeating footers should not be pushed. r=bernd, sr=bzbarsky, a=choffman